@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-17T16:24:59Z",
+  "timestamp" : "2022-05-18T08:19:10Z",
   "count_outdated" : 264,
   "uniques_outdated" : 142,
-  "count" : 303,
-  "uniques" : 167,
+  "count" : 304,
+  "uniques" : 168,
   "clones" : [
     {
       "timestamp": "2022-05-05T00:00:00Z",
@@ -15,37 +15,37 @@
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 9,
-      "count_minmax": [ 0, 9 ],
+      "count_minmax": [ 9, 9 ],
       "uniques": 6,
-      "uniques_minmax": [ 0, 6 ]
+      "uniques_minmax": [ 6, 6 ]
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 11,
-      "count_minmax": [ 0, 11 ],
+      "count_minmax": [ 11, 11 ],
       "uniques": 7,
-      "uniques_minmax": [ 0, 7 ]
+      "uniques_minmax": [ 7, 7 ]
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
       "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
@@ -57,9 +57,9 @@
     {
       "timestamp": "2022-05-12T00:00:00Z",
       "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-13T00:00:00Z",
@@ -71,26 +71,33 @@
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 3,
-      "count_minmax": [ 0, 3 ],
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-15T00:00:00Z",
       "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count_minmax": [ 2, 2 ],
       "uniques": 2,
-      "uniques_minmax": [ 0, 2 ]
+      "uniques_minmax": [ 2, 2 ]
     },
     {
       "timestamp": "2022-05-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
