@@ -1,5 +1,5 @@
 {
-  "count": 39,
+  "count": 40,
   "uniques": 13,
   "clones": [
     {
@@ -64,6 +64,11 @@
     },
     {
       "timestamp": "2022-05-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-18T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
