@@ -1,3 +1,10 @@
+2022-05-18T08:19:10Z:
+* notice: last 14d: all unq: 40 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 264 142 / 303 167
+* notice: next accum: outdated-all outdated-unq / all unq: 264 142 / 304 168
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-18]
+
 2022-05-17T16:24:59Z:
 * notice: last 14d: all unq: 39 13
 * notice: prev accum: outdated-all outdated-unq / all unq: 264 142 / 302 166
